--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <li><a href="#rooms">Rooms</a></li>
                 <li><a href="#gallery">Gallery</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a href="booking.html" class="book-btn">Book a Room</a></li>
                 <li><a href="login.html" class="login-btn">Login</a></li>
             </ul>
         </nav>
@@ -77,3 +78,4 @@
 
 </body>
 </html>
+
